welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: '=' expected but ';' found.
while(!i=4){
^